fix alignment

--- a/src/App.css
+++ b/src/App.css
@@ -26,13 +26,27 @@ li {
 }
 
 .nav-wrap p {
-  margin-left: 62px;
+  margin-left: 78px;
   font-size: 1.875rem;
   font-weight: 700;
   color: #0290ff;
   font-family: "Montserrat", sans-serif;
 }
-
+@media screen and (min-width: 1400px) {
+  .nav-wrap p {
+    margin-left: 103px;
+    font-size: 1.875rem;
+    font-weight: 700;
+    color: #0290ff;
+    font-family: "Montserrat", sans-serif;
+  }
+  .progress {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 300px;
+}
+}
 .book-list {
   width: 100%;
   align-items: center;
