--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,7 @@
 .categories {
   background-color: white;
   margin: 0;
+  margin-left: 7px;
   font-family: Montserrat, sans-serif;
   font-size: 0.875rem;
   opacity: 0.5;
@@ -56,6 +57,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-right: 100px;
 }
 
 .progress-text {
